--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket Patrol (2)</title>
-    <script src="./lib/phaser.js"> </script>
-    <script src="./src/main.js"> </script>
+    <title>Rocket Patrol</title>
+    <script src="./lib/phaser.js"></script>
+    <script src="./src/prefab/Rocket.js"></script>
+    <script src="./src/prefab/Spaceship.js"></script>
+    <script src="./src/scenes/Menu.js"></script>
+    <script src="./src/scenes/Play.js"></script>
+    <script src="./src/main.js"></script>
 </head>
 <body>
 
